Add environment for a definition block.

--- a/texdocs/slides/src2misc.sty
+++ b/texdocs/slides/src2misc.sty
@@ -8,4 +8,6 @@
 \newcommand{\osquare}[1][n]{\ensuremath{O({#1}^2)}}
 \newcommand{\onlog}[1][n]{\ensuremath{O({#1}\log{#1})}}
 
+\newenvironment{defblock}[1]{\begin{block}{Definition: \alert{#1}}}{\end{block}}
+
 \endinput
