Create slides on heaps.

--- a/texdocs/slides/src2misc.sty
+++ b/texdocs/slides/src2misc.sty
@@ -3,6 +3,7 @@
 
 \newcommand{\gqq}[1]{\glqq #1\grqq\ }
 
+\newcommand{\oconst}{\ensuremath{O(1)}}
 \newcommand{\olog}[1][n]{\ensuremath{O(\log{#1})}}
 \newcommand{\olin}[1][n]{\ensuremath{O(#1)}}
 \newcommand{\osquare}[1][n]{\ensuremath{O({#1}^2)}}
