Create slides on tries.

--- a/texdocs/slides/trees-main.tex
+++ b/texdocs/slides/trees-main.tex
@@ -29,4 +29,5 @@
     \inputframesection{Binärbäume}{binarytrees.tex}
     \inputframesection{Binäre Suchbäume}{binarysearchtrees.tex}
     \inputframesection{Heaps}{heaps.tex}
+    \inputframesection{Präfixbäume}{tries.tex}
 \end{document}
